examples/test/testpolicy16372.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16372
  namespace: namespace148
spec:
  podSelector:
    matchLabels:
      key16: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value28
          key20: value24
          key23: value44
      podSelector:
        matchLabels:
          key21: value7
          key15: value36
          key10: value2
